--- a/API/package.json
+++ b/API/package.json
@@ -2,9 +2,10 @@
   "name": "recipee-book-api",
   "version": "0.1.0",
   "description": "Recipee-book API",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "dev": "tsnd --respawn src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -21,10 +22,15 @@
   },
   "homepage": "https://github.com/HGBPedro/recipee-book#readme",
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "pino-pretty": "^9.1.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "pino": "^8.7.0"
   }
 }
