--- a/API/package.json
+++ b/API/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/HGBPedro/recipee-book#readme",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/mongoose": "^5.11.97",
     "pino-pretty": "^9.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
