--- a/API/package.json
+++ b/API/package.json
@@ -32,6 +32,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pino": "^8.7.0"
   }
 }
