--- a/API/package.json
+++ b/API/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "pino-pretty": "^9.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
@@ -32,6 +33,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pino": "^8.7.0"
