--- a/API/package.json
+++ b/API/package.json
@@ -23,15 +23,20 @@
   "homepage": "https://github.com/HGBPedro/recipee-book#readme",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
+    "@types/passport": "^1.0.11",
+    "@types/passport-local": "^1.0.34",
     "pino-pretty": "^9.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
