--- a/API/package.json
+++ b/API/package.json
@@ -33,7 +33,9 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
