--- a/API/.env.example
+++ b/API/.env.example
@@ -1,3 +1,6 @@
 MONGODB_CLUSTER_USERNAME=''
 MONGODB_CLUSTER_PASSWORD=''
+AWS_ACCESS_KEY_ID=''
+AWS_SECRET_ACCESS_KEY=''
+AWS_BUCKET_NAME=''
 PORT=0000
