--- a/API/package.json
+++ b/API/package.json
@@ -33,6 +33,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.344.0",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
